# servant-graphql-example

./: README.md
servant-graphql/: servant-graphql.cabal  stack.yaml
servant-graphql/app/: Main.hs
servant-graphql/src/: Application.hs  Characters.hs  GraphQLCharacters.hs
