name:                servant-graphql
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/servant-graphql#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
                       Characters
                       GraphQLCharacters
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , transformers
                     , servant-server
                     , aeson
                     , wai
                     , warp
                     , mtl
                     , containers
                     , http-types
                     , http-client
                     , lucid
                     , text
                     , bytestring
                     , basic-prelude
                     , servant-docs
                     , servant-lucid
                     , servant-swagger
                     , servant-purescript
                     , servant-mock
                     , QuickCheck
                     , graphql
                     , stm

  default-language:    Haskell2010
  default-extensions:          NoImplicitPrelude

executable servant-graphql-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-graphql
                     , basic-prelude
  default-language:    Haskell2010
  default-extensions:          NoImplicitPrelude

test-suite servant-graphql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-graphql
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-graphql
